# mqdish

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dispatch-dummies.sh  docker-compose.yml  dummy.sh
.github/workflows/: build_image.yaml
src/shared/: config.rs  config_test.rs  dispatcher.rs  executor.rs  mod.rs  models.rs
src/shared/msgbus/: amqp.rs  bus.rs  mod.rs
