[package]
name = "mqdish"
version = "1.0.2"
edition = "2021"

[[bin]]
name = "mqdish"
path = "src/bin/producer.rs"

[[bin]]
name = "mqdish-consumer"
path = "src/bin/consumer.rs"

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.7", features = ["derive"] }
config = { version = "0.13.3", features = ["yaml-rust", "yaml"], default-features = false }
dirs = "5.0.1"
lapin = { version = "2.1.1", default-features = false, features = ["openssl"] }
openssl = { version = "0.10.52", features = ["vendored"] } # allows to statically link binaries
openssl-probe = "0.1.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "sync", "rt"] }
tokio-stream = "0.1.14"


[dev-dependencies]
rand = "0.8.5"
